--- a/dynamic-plugin/src/components/genie.css
+++ b/dynamic-plugin/src/components/genie.css
@@ -481,6 +481,8 @@
       display: grid;
       grid-template-columns: minmax(0, .5fr) minmax(0, 1fr);
       gap: 1rem;
+      height: 100%;
+      overflow: hidden;
       & .pf-chatbot__content {
         flex-direction: column;
       }
@@ -489,6 +491,7 @@
     & > .left-sidebar {
       grid-area: left-sidebar;
       padding: 1rem;
+      height: 100%;
     }
   
     & > .right-sidebar {
@@ -504,6 +507,7 @@
   border-radius: 5px;
   width: 100%;
   height: 100%;
+  overflow: scroll;
 }
 
 .chat-interface {
@@ -511,6 +515,7 @@
   --pf-t--chatbot--background: #fff;
   border-radius: 5px;
   background-color: #fff;
+  height: 100%;
 }
 
 :is(h1, h2, h3, h4, h5, h6) {
